Improved call log display - Fixed javascript ordering so JQuery is loaded before document ready function is called - Fixed word-wrapping of phone number and time columns - Re: #13

--- a/src/userinterface/static/css/callattendant.css
+++ b/src/userinterface/static/css/callattendant.css
@@ -5,5 +5,9 @@ body {
 }
 /* Set a fixed width for the phone column */
 .phoneno {
-   width: 120px;
+   width: 125px;
+}
+/* Set a fixed width for the time column */
+.time {
+   width: 95px;
 }
